@@ -49,7 +49,7 @@
 				graph = {};
 
 			modules.forEach( function ( moduleName ) {
-				var dependencies = mw.loader.moduleRegistry[ moduleName ].dependencies || [];
+				var dependencies = mw.loader.moduleRegistry.get( moduleName ).dependencies || [];
 
 				if ( !hasOwn.call( graph, moduleName ) ) {
 					graph[ moduleName ] = { requiredBy: [] };
@@ -73,7 +73,7 @@
 		 * @return {number|null} Module size in bytes or null
 		 */
 		getModuleSize: function ( moduleName ) {
-			var module = mw.loader.moduleRegistry[ moduleName ],
+			var module = mw.loader.moduleRegistry.get( moduleName ),
 				args, i, size;
 
 			if ( module.state !== 'ready' ) {
@@ -254,7 +254,7 @@
 				var modules = [];
 
 				inspect.getLoadedModules().forEach( function ( name ) {
-					var css, stats, module = mw.loader.moduleRegistry[ name ];
+					var css, stats, module = mw.loader.moduleRegistry.get( name );
 
 					try {
 						css = module.style.css.join();
@@ -308,7 +308,7 @@
 			}
 
 			return inspect.getLoadedModules().filter( function ( moduleName ) {
-				var module = mw.loader.moduleRegistry[ moduleName ];
+				var module = mw.loader.moduleRegistry.get( moduleName );
 
 				// Grep module's JavaScript
 				if ( $.isFunction( module.script ) && pattern.test( module.script.toString() ) ) {
